# ej

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: pages.yml  release.yml  rust.yml
crates/libs/ej/: Cargo.toml
crates/libs/ej-auth/: Cargo.toml  README.md
crates/libs/ej-auth/src/: auth_body.rs  error.rs  jwt.rs  lib.rs  secret_hash.rs  sha256.rs
crates/libs/ej-builder-sdk/: Cargo.toml  README.md
crates/libs/ej-builder-sdk/src/: error.rs  lib.rs
crates/libs/ej-config/: Cargo.toml  README.md
crates/libs/ej-config/src/: ej_board.rs  ej_board_config.rs  ej_config.rs  error.rs  lib.rs  prelude.rs
crates/libs/ej-dispatcher-sdk/: Cargo.toml  README.md
crates/libs/ej-dispatcher-sdk/src/: build.rs  ejbuilder.rs  ejclient.rs  ejsocket_message.rs  ejws_message.rs  error.rs  fetch_jobs.rs  fetch_run_result.rs  lib.rs  prelude.rs  run.rs  socket.rs
crates/libs/ej-dispatcher-sdk/src/ejjob/: mod.rs
crates/libs/ej-dispatcher-sdk/src/ejjob/results/: mod.rs
crates/libs/ej-io/: Cargo.toml  README.md
crates/libs/ej-io/src/: lib.rs  process.rs  runner.rs
crates/libs/ej-models/: Cargo.toml  README.md
crates/libs/ej-models/src/: error.rs  lib.rs  prelude.rs
crates/libs/ej-models/src/auth/: client_permission.rs  mod.rs  permission.rs
crates/libs/ej-models/src/builder/: ejbuilder.rs  mod.rs
crates/libs/ej-models/src/client/: ejclient.rs  mod.rs
crates/libs/ej-models/src/config/: ejboard.rs  ejboard_config.rs  ejboard_config_tag.rs  ejconfig.rs  ejtag.rs  mod.rs
crates/libs/ej-models/src/db/: config.rs  connection.rs  mod.rs
crates/libs/ej-models/src/job/: ejjob.rs  ejjob_logs.rs  ejjob_results.rs  ejjob_status.rs  ejjob_type.rs  mod.rs
crates/libs/ej-requests/: Cargo.toml  README.md
crates/libs/ej-requests/src/: lib.rs
crates/libs/ej-web/: Cargo.toml  README.md
crates/libs/ej-web/src/: auth_token.rs  ejclient.rs  ejconfig.rs  ejconnected_builder.rs  ejjob.rs  error.rs  lib.rs  mw_auth.rs
crates/libs/ej-web/src/ctx/: ctx_client.rs  mod.rs  resolver.rs
crates/libs/ej-web/src/traits/: job_result.rs  mod.rs
crates/libs/ej/src/: error.rs  lib.rs
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: error.rs  lib.rs  sha256.rs
crates/libs/lib-builder-sdk/: Cargo.toml
crates/libs/lib-builder-sdk/src/: error.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: error.rs  lib.rs  schema.rs
crates/libs/lib-core/src/crypto/: auth.rs  auth_body.rs  jwt.rs  mod.rs  secret_hash.rs
crates/libs/lib-core/src/ctx/: ctx_client.rs  mod.rs
crates/libs/lib-core/src/db/: connection.rs
crates/libs/lib-core/src/ej_builder/: api.rs
crates/libs/lib-core/src/ej_client/: api.rs  db.rs
crates/libs/lib-core/src/ej_config/: ej_board.rs  ej_board_config.rs  ej_config.rs
crates/libs/lib-core/src/ej_config/db/: ej_board_config_db.rs  ej_board_config_tag_db.rs  ej_board_db.rs
crates/libs/lib-core/src/ej_connected_builder/: mod.rs
crates/libs/lib-core/src/ej_job/: api.rs  db.rs  mod.rs
crates/libs/lib-core/src/ej_job/job_type/: db.rs  mod.rs
crates/libs/lib-core/src/ej_job/logs/: db.rs
crates/libs/lib-core/src/ej_job/results/: api.rs  db.rs
crates/libs/lib-core/src/ej_job/status/: db.rs
crates/libs/lib-core/src/ej_message/: mod.rs
crates/libs/lib-core/src/permission/: mod.rs
crates/libs/lib-core/src/web/: auth_token.rs  ctx.rs  error.rs
crates/libs/lib-core/src/web/ctx/: ctx_client.rs  resolver.rs
crates/libs/lib-dispatcher-sdk/: Cargo.toml
crates/libs/lib-io/: Cargo.toml
crates/libs/lib-io/src/: lib.rs  process.rs  runner.rs
crates/libs/lib-models/: Cargo.toml
crates/libs/lib-models/src/: error.rs  lib.rs  schema.rs
crates/libs/lib-requests/: Cargo.toml
crates/libs/lib-requests/src/: lib.rs
crates/services/builder/: Cargo.toml
crates/services/builder/src/: build.rs  cli.rs  commands.rs  connection.rs  main.rs  run.rs
crates/services/dispatcher/: Cargo.toml
crates/services/dispatcher/src/: api.rs  dispatcher.rs  main.rs  socket.rs
crates/services/ejb/: Cargo.toml  Dockerfile  README.md
crates/services/ejb/src/: build.rs  builder.rs  checkout.rs  cli.rs  commands.rs  common.rs  connection.rs  error.rs  logs.rs  main.rs  run.rs  run_output.rs
crates/services/ejbuilder/: Cargo.toml
crates/services/ejbuilder/src/: build.rs  cli.rs  (+8 more)
crates/services/ejcli/: Cargo.toml  README.md
crates/services/ejcli/src/: cli.rs  commands.rs  main.rs  models.rs
crates/services/ejd/: Cargo.toml  README.md
crates/services/ejd/src/: api.rs  dispatcher.rs  error.rs  main.rs  socket.rs
crates/services/ejdispatcher/: Cargo.toml  Dockerfile
crates/tools/ejcli/: Cargo.toml
crates/tools/ejcli/src/: cli.rs  commands.rs  main.rs
dev-config/: dev.env
examples/: config.toml
guides/: 01-Builder.md  02-BuilderSDK.md  03-Dispatcher.md  04-DispatcherSDK.md  book.toml
guides/src/: 00-GettingStarted.md  01-Builder.md  02-BuilderSDK.md  03-Dispatcher.md  04-DispatcherSDK.md  SUMMARY.md
guides/src/media/: main.excalidraw
migrations/2025-04-29-083354_client/: down.sql  up.sql
migrations/2025-05-05-071944_permissions/: down.sql  up.sql
migrations/2025-05-12-095946_builder/: down.sql  up.sql
migrations/2025-05-16-144002_config/: down.sql  up.sql
migrations/2025-06-19-160746_builder-permissions/: down.sql  up.sql
migrations/2025-06-20-062028_job/: down.sql  up.sql
src/: error.rs  lib.rs  schema.rs
src/auth/: auth.rs  jwt.rs  mod.rs
src/crypto/: auth.rs  sha256.rs
src/ctx/: ctx_client.rs
src/db/: config.rs
src/ej_builder/: api.rs  db.rs
src/ej_client/: api.rs  db.rs  mod.rs
src/ej_client_permission/: mod.rs
src/ej_config/: ej_board.rs  ej_board_config.rs  ej_config.rs  mod.rs
src/ej_config/db/: ej_board_config_db.rs  ej_config_db.rs  ej_tag.rs  mod.rs
src/ej_connected_client/: mod.rs
src/ej_job/: api.rs
src/ej_message/: mod.rs
src/permission/: mod.rs
src/web/: auth.rs  ctx.rs  error.rs  mod.rs  mw_auth.rs
tests/: test_builder.rs  test_client.rs  test_ej_config.rs
tests/common/: api_client.rs  db_test_context.rs  mod.rs  test_context.rs
(+25 files in other folders)
