[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[workspace]
members = [
	# Libs
	"crates/libs/lib-core",
	"crates/libs/lib-models",
	"crates/libs/lib-io",
	"crates/libs/lib-requests",
	"crates/libs/lib-dispatcher-sdk",
	"crates/libs/lib-builder-sdk",

	# Services
	"crates/services/ejdispatcher",
	"crates/services/ejbuilder",
	"crates/services/ejcli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["André Costa andre_miguel_costa@hotmail.com"]
edition = "2024"
