[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[workspace]
members = [
	# Libs
	"crates/libs/ej",
	"crates/libs/ej-models",
	"crates/libs/ej-auth",
	"crates/libs/ej-io",
	"crates/libs/ej-requests",
	"crates/libs/ej-dispatcher-sdk",
	"crates/libs/ej-builder-sdk",

	# Services
	"crates/services/ejd",
	"crates/services/ejb",
	"crates/services/ejcli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["André Costa andre_miguel_costa@hotmail.com"]
edition = "2024"
