[package]
name = "ej-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
description = "Authentication utilities for the EJ framework, including JWT management and password hashing."


[dependencies]
argon2 = "0.5.3"
sha2 = "0.10.9"
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
rand = { version = "0.8.5", features = ["getrandom"] }

[lints]
workspace = true
