[package]
name = "ej-builder-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
tokio = { version = "1.44.2" }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"

[lints]
workspace = true
