[package]
name = "ej-builder-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
description = "SDK for creating applications that interface with EJB"

[dependencies]
tokio = { version = "1.44.2", features = [
	"signal",
	"net",
	"io-util",
	"rt-multi-thread",
] }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["tokio-test"]
