[package]
name = "ej-config"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ej-auth = { path = "../../libs/ej-auth" }
uuid = { version = "1.16.0" }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
thiserror = "2.0.12"
toml = "0.8.22"

[lints]
workspace = true
