[package]
name = "ej-dispatcher-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
ej-config = { path = "../../libs/ej-config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2" }
uuid = { version = "1.16.0" }
tracing = "0.1.41"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.8"
[lints]
workspace = true
