[package]
name = "ej-dispatcher-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
ej-config = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["net", "io-util"] }
uuid = { version = "1.16.0" }
tracing = "0.1.41"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["tokio-test"]
