[package]
name = "ej-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
description = "Program management utilities for the EJ framework"

[dependencies]
tokio = { version = "1.46.1", features = [
	"sync",
	"process",
	"io-util",
	"rt-multi-thread",
	"time",
	"macros",
] }
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["macros"] }

[lints]
workspace = true
