[package]
name = "ej-models"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
diesel = { version = "2.2.10", features = [
	"uuid",
	"chrono",
	"postgres",
	"r2d2",
] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"

[lints]
workspace = true
