[package]
name = "ej-requests"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ej = { path = "../../libs/ej" }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
