[package]
name = "ej-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
ej-auth = "0.3.0"
ej-models = { path = "../../libs/ej-models" }
ej-config = "0.3.0"
ej-dispatcher-sdk = { path = "../../libs/ej-dispatcher-sdk" }
axum = { version = "0.8.3", features = ["macros", "ws"] }
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.11.0"
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
