[package]
name = "lib-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
argon2 = "0.5.3"
sha2 = "0.10.9"
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = { version = "0.8.5", features = ["getrandom"] }

[lints]
workspace = true
