[package]
name = "ej"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lib-models = { path = "../../libs/lib-models" }
lib-auth = { path = "../../libs/lib-auth" }
axum = { version = "0.8.3", features = ["macros", "ws"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
headers = "0.4.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
toml = "0.8.22"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["cookies"] }
serial_test = "3.2.0"
