[package]
name = "lib-dispatcher-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ej = { path = "../../libs/lib-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2" }
uuid = { version = "1.16.0" }
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.8"
[lints]
workspace = true
