[package]
name = "ejb"
version = "0.1.0"
edition = "2021"

[dependencies]
ej = { path = "../../libs/lib-core" }
lib-io = { path = "../../libs/lib-io" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
axum = { version = "0.8.3", features = ["macros", "ws"] }
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "cookies"] }
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
