[package]
name = "ejb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
ej-auth = "0.3.0"
ej-web = { path = "../../libs/ej-web" }
ej-io = { path = "../../libs/ej-io" }
ej-builder-sdk = { path = "../../libs/ej-builder-sdk" }
ej-dispatcher-sdk = { path = "../../libs/ej-dispatcher-sdk" }
ej-requests = { path = "../../libs/ej-requests" }
ej-config = { path = "../../libs/ej-config" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
axum = { version = "0.8.3", features = ["macros", "ws"] }
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "cookies"] }
uuid = { version = "1.16", features = ["v4"] }
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.12"
