[package]
name = "ejb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
description = "The EJ Builder (EJB) application for managing build processes and board communication"

[dependencies]
ej-auth = "0.3.0"
ej-io = "0.3.0"
ej-builder-sdk = "0.3.2"
ej-dispatcher-sdk = "0.3.0"
ej-requests = "0.3.0"
ej-config = "0.3.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
serde_json = "1.0"
uuid = { version = "1.16", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.12"
