[package]
name = "ejcli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]

ej-requests = { path = "../../libs/ej-requests" }
ej-dispatcher-sdk = "0.3.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
pretty_env_logger = "0.5.0"
log = "0.4.27"
rpassword = "7.4.0"

[lints]
workspace = true
