[package]
name = "ejd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
ej-web = { path = "../../libs/ej-web" }
ej-models = { path = "../../libs/ej-models" }
ej-config = "0.3.0"
ej-dispatcher-sdk = "0.3.3"
axum = { version = "0.8.3", features = ["macros", "ws"] }
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.44.2", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
tokio-tungstenite = "0.26.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0" }
thiserror = "2.0.12"

[dev-dependencies]
diesel = { version = "2.2.10", features = [
	"uuid",
	"chrono",
	"postgres",
	"r2d2",
] }

[package.metadata.cargo-machete]
ignored = ["futures-util"]
