[package]
name = "ejcli"
version = "0.1.0"
edition = "2024"

[dependencies]

ej = { path = "../../libs/lib-core" }
lib-io = { path = "../../libs/lib-io" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.5.0"
log = "0.4.27"

[lints]
workspace = true
