[package]
name = "ejcli"
version = "0.1.0"
edition = "2024"

[dependencies]

ej = { path = "../../libs/lib-core" }
lib-io = { path = "../../libs/lib-io" }
lib-requests = { path = "../../libs/lib-requests" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.5.0"
log = "0.4.27"
rpassword = "7.4.0"

[lints]
workspace = true
